--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"eslint-config-next": "14.2.26",
 		"immer": "^10.1.1",
 		"postcss": "^8",
+		"react-hook-form": "^7.56.2",
 		"react-paginate": "^8.3.0",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5",
