--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"react-dom": "^18"
 	},
 	"devDependencies": {
+		"@svgr/webpack": "^8.1.0",
 		"@tanstack/react-query": "^5.74.7",
 		"@types/jsonwebtoken": "^9.0.9",
 		"@types/node": "^20",
@@ -22,6 +23,7 @@
 		"axios": "^1.9.0",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.26",
+		"framer-motion": "^12.10.5",
 		"immer": "^10.1.1",
 		"postcss": "^8",
 		"react-hook-form": "^7.56.2",
